--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "sequelize": "^4.4.2",
+    "serve-favicon": "~2.4.2",
+    "sqlite3": "^3.1.9"
   },
   "devDependencies": {
     "css-loader": "^0.28.4",
