--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-session": "^1.15.1",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "morgan": "~1.8.1",
     "sequelize": "^4.4.2",
     "serve-favicon": "~2.4.2",
