--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "onchange": "^3.2.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "file-loader": "^0.11.2",
     "webpack": "^3.4.1"
   }
 }
